
6.49  2016-02-26
  - Added inspect method to Mojo::Exception.
  - Improved check_box and radio_button helpers with support for "on" default
    values.
  - Improved val method in Mojo::DOM with support for "on" default values.
  - Fixed Windows bug in "util.t".

6.48  2016-02-24
  - Added files function to Mojo::Util.
  - Updated jQuery to version 2.2.1.
  - Improved url_for performance significantly.
  - Fixed bug where the results of the list_files method in Mojo::Home would
    include directories.
  - Fixed a few small CGI bugs.

6.47  2016-02-19
  - Deprecated Mojo::Log::is_debug, Mojo::Log::is_error, Mojo::Log::is_info and
    Mojo::Log::is_warn in favor of Mojo::Log::is_level.
  - Added is_level method to Mojo::Log.
  - Fixed datetime_field helper to use the correct type attribute value.

6.46  2016-02-13
  - Improved Mojo::Headers performance. (batman)
  - Fixed small proxy bug in Mojo::UserAgent::Transactor.

6.45  2016-02-09
  - Deprecated Mojo::Util::xss_escape in favor of Mojo::Util::xml_escape.
  - Improved Mojo::Template performance slightly.

6.44  2016-02-04
  - Removed deprecated format_regex attribute from Mojolicious::Routes::Pattern.
  - Improved get command not to use the user agent of the application.
  - Improved Mojo::JSON performance slightly.

6.43  2016-02-01
  - Removed client_close and server_close methods from Mojo::Transaction.
  - Added closed method to Mojo::Transaction.
  - Added parse_message method to Mojo::Transaction::WebSocket.
  - Improved a few examples to avoid timing attacks.
  - Fixed timing bug in Mojo::Server::Daemon.

6.42  2016-01-24
  - Fixed use of deprecated Perl feature in Mojo::JSON.
  - Fixed validation filter bugs in Mojolicious::Validator::Validation.

6.41  2016-01-20
  - Added support for validation filters.
  - Added filters attribute to Mojolicious::Validator.
  - Added add_filter method to Mojolicious::Validator.
  - Added filter arguments to optional and required methods in